--- a/app/src/main/res/layout-land/activity_film_data.xml
+++ b/app/src/main/res/layout-land/activity_film_data.xml
@@ -2,8 +2,7 @@
 <ScrollView android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:app="http://schemas.android.com/apk/res-auto" >
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -64,7 +63,7 @@
             android:text="@string/film_year_value" />
 
         <TextView
-            android:id="@+id/film_type_genere"
+            android:id="@+id/film_type_genre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignEnd="@id/film_data"
@@ -76,7 +75,7 @@
             style="@style/Widget.AppCompat.Button.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/film_type_genere"
+            android:layout_below="@id/film_type_genre"
             android:layout_marginTop="16dp"
             android:layout_alignEnd="@id/film_data"
             android:text="@string/film_imdb" />
