--- a/app/src/main/res/layout/activity_film_data.xml
+++ b/app/src/main/res/layout/activity_film_data.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingLeft="16dp"
     android:paddingTop="16dp"
     android:paddingRight="16dp"
-    android:paddingBottom="16dp"
-    tools:context=".activity.FilmDataActivity">
+    android:paddingBottom="16dp">
 
     <ImageView
         android:id="@+id/imageView"
@@ -59,7 +57,7 @@
         android:text="@string/film_year_value" />
 
     <TextView
-        android:id="@+id/film_type_genere"
+        android:id="@+id/film_type_genre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/imageView"
@@ -71,7 +69,7 @@
         style="@style/Widget.AppCompat.Button.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/film_type_genere"
+        android:layout_below="@id/film_type_genre"
         android:layout_marginTop="16dp"
         android:layout_toEndOf="@id/imageView"
         android:text="@string/film_imdb" />
