--- a/app/src/main/res/layout/activity_film_list.xml
+++ b/app/src/main/res/layout/activity_film_list.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".activity.FilmListActivity"
+    tools:context=".fragment.FilmListFragment"
     android:id="@android:id/list"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/include_appbar"
