--- a/app/src/main/res/layout/activity_film_list_recycled.xml
+++ b/app/src/main/res/layout/activity_film_list_recycled.xml
@@ -2,7 +2,7 @@
 <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".activity.FilmListActivity"
+    tools:context=".fragment.FilmListFragment"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@android:id/list"
